Ajustes Gerais nos Efeitos Visuais e Posicionamentos

--- a/index.html
+++ b/index.html
@@ -117,25 +117,58 @@
 					<div class="row row-home">
 						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
 							<h1 class="title-big-white">Seja um <br/> <span class="extra-big">Franqueado</span></h1>
-							<p class="p-default">Preencha o cadastro abaixo e faça o <span>download</span> agora mesmo da nossa apresentação com as vantagens de ser um franqueado <span>LIEN.</span></p>
+							<p class="p-default animation-1">Preencha o cadastro abaixo e faça o <span>download</span> agora mesmo da nossa apresentação com as vantagens de ser um franqueado <span>LIEN.</span></p>
 							<form id="form-franqueado">
-								<div class="col-lg-12 no-padding">
+								<div class="col-lg-12 no-padding animation-2">
 									<input type="text" placeholder="Nome" id="name" name="name"/>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding">
-									<input type="text" placeholder="Telefone" id="phone" name="phone" />
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding animation-2">
+									<input type="text" placeholder="Telefone" id="phone" name="phone" class="mask" data-inputmask="'mask': '(99) 9999-9999[9]'"/>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding padding-left">
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding padding-left animation-2">
 									<input type="text" placeholder="E-mail" id="email" name="email" />
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding">
-									<input type="text" placeholder="Estado" id="state" name="state" />
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding animation-2">
+									<select name="state" id="state">
+										<option value="AC">Acre</option>
+										<option value="AL">Alagoas</option>
+										<option value="AP">Amapá</option>
+										<option value="AM">Amazonas</option>
+										<option value="BA">Bahia</option>
+										<option value="CE">Ceará</option>
+										<option value="DF">Distrito Federal</option>
+										<option value="ES">Espírito Santo</option>
+										<option value="GO">Goiás</option>
+										<option value="MA">Maranhão</option>
+										<option value="MT">Mato Grosso</option>
+										<option value="MS">Mato Grosso do Sul</option>
+										<option value="MG">Minas Gerais</option>
+										<option value="PA">Pará</option>
+										<option value="PB">Paraíba</option>
+										<option value="PR">Paraná</option>
+										<option value="PE">Pernambuco</option>
+										<option value="PI">Piauí</option>
+										<option value="RJ">Rio de Janeiro</option>
+										<option value="RN">Rio Grande do Norte</option>
+										<option value="RS">Rio Grande do Sul</option>
+										<option value="RO">Rondônia</option>
+										<option value="RR">Roraima</option>
+										<option value="SC">Santa Catarina</option>
+										<option value="SP">São Paulo</option>
+										<option value="SE">Sergipe</option>
+										<option value="TO">Tocantins</option>
+									</select>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding padding-left">
-									<input type="text" placeholder="Cidade" id="city" name="city" />
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding padding-left animation-2">
+									<select name="city" id="city">
+										<option value="cornelio-procopio">Cornélio Procópio</option>
+										<option value="londrina">Londrina</option>
+									</select>
 								</div>
 							</form>
-							<button class="lien-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="602 926.4 38 38"> <defs> <style>.cls-1{fill: #58595b;}</style> </defs> <g id="down-arrow" transform="translate(600 926.4)"> <g id="Group_56" data-name="Group 56" transform="translate(2)"> <path id="Path_48" data-name="Path 48" class="cls-1" d="M38,19A19,19,0,1,0,19,38,19.022,19.022,0,0,0,38,19ZM1.9,19A17.1,17.1,0,1,1,19,36.1,17.12,17.12,0,0,1,1.9,19Z"/> <path id="Path_49" data-name="Path 49" class="cls-1" d="M170.966,144.532l5.339-5.339a.948.948,0,0,0-1.341-1.341l-3.719,3.719V127.353a.953.953,0,1,0-1.906,0v14.211l-3.719-3.719a.948.948,0,1,0-1.341,1.341l5.339,5.339a.964.964,0,0,0,1.348.008Z" transform="translate(-151.292 -116.606)"/> </g> </g></svg>Baixar Apresentação</button>
+							<div class="animation-3 box-relative">
+								<button class="lien-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="602 926.4 38 38"> <defs> <style>.cls-1{fill: #58595b;}</style> </defs> <g id="down-arrow" transform="translate(600 926.4)"> <g id="Group_56" data-name="Group 56" transform="translate(2)"> <path id="Path_48" data-name="Path 48" class="cls-1" d="M38,19A19,19,0,1,0,19,38,19.022,19.022,0,0,0,38,19ZM1.9,19A17.1,17.1,0,1,1,19,36.1,17.12,17.12,0,0,1,1.9,19Z"/> <path id="Path_49" data-name="Path 49" class="cls-1" d="M170.966,144.532l5.339-5.339a.948.948,0,0,0-1.341-1.341l-3.719,3.719V127.353a.953.953,0,1,0-1.906,0v14.211l-3.719-3.719a.948.948,0,1,0-1.341,1.341l5.339,5.339a.964.964,0,0,0,1.348.008Z" transform="translate(-151.292 -116.606)"/> </g> </g></svg>Baixar Apresentação</button>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -146,18 +179,18 @@
 					<div class="row row-sobre">
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<h1 class="title-section">Sobre</h1>
-							<img src="./assets/images/lien-about-logo.svg" class="img-decorative" alt="Logo LIEN" />
-							<h2 class="title-h2">Conheça um pouco mais sobre a LIEN Corretora de Seguros.</h2>
-							<p class="p-default">Saber que seus bens estão seguros é viver com mais tranquilidade, podendo dedicar seu tempo no que mais importa para você.
+							<img src="./assets/images/lien-about-logo.svg" class="img-decorative animation-1" alt="Logo LIEN" />
+							<h2 class="title-h2 animation-1">Conheça um pouco mais sobre a LIEN Corretora de Seguros.</h2>
+							<p class="p-default animation-1">Saber que seus bens estão seguros é viver com mais tranquilidade, podendo dedicar seu tempo no que mais importa para você.
 							Pensando nisso a <span>LIEN Corretora de Seguros</span> trabalha oferecendo facilidade e transparência. Uma corretora atual que busca
 							a melhoria contínua em seus processos e serviços.</p>
-							<p class="p-default">Nosso <span>objetivo</span> é proporcionar segurança e despreocupação, por isso contamos com uma consultoria especializada que visa orientar
+							<p class="p-default animation-1">Nosso <span>objetivo</span> é proporcionar segurança e despreocupação, por isso contamos com uma consultoria especializada que visa orientar
 							e apresentar a proposta de seguro mais adequada às suas necessidades, através de uma análise minuciosa para oferecer o melhor
 							custo-benefício com a certeza de uma apólice bem elaborada.</p>
-							<p class="p-default">No <span>site</span> é possível solicitar cotações, tirar dúvidas e compreender em detalhes tudo sobre o seguro contratado. Isso permitirá
+							<p class="p-default animation-1">No <span>site</span> é possível solicitar cotações, tirar dúvidas e compreender em detalhes tudo sobre o seguro contratado. Isso permitirá
 							usufruir de todas as facilidades que o seguro oferece e ainda ter a certeza de estar realmente assistido, caso tenha a necessidade
 							de acionar os serviços.</p>
-							<p class="p-default">Com a <span>LIEN Corretora de Seguros</span> você estará protegido e terá todo o suporte de nossa consultoria especializada com agilidade
+							<p class="p-default animation-1">Com a <span>LIEN Corretora de Seguros</span> você estará protegido e terá todo o suporte de nossa consultoria especializada com agilidade
 							e clareza. Conheça nossos serviços, faça um seguro com a LIEN.</p>
 						</div>
 					</div>
@@ -200,20 +233,20 @@
 					<div class="row row-duvidas-frequentes">
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<h1 class="title-section">Dúvidas Frequentes</h1>
-							<h2 class="title-h2">A LIEN te ajuda a entender melhor o mundo dos seguros.</h2>
-							<p class="p-light">clique no tópico para ver mais</p>
-							<h3>Seguro de Automóvel</h3>
-							<p class="question">1. O que caracteriza a indenização integral em caso de ocorrência de sinistro?</p>
-							<p class="awnser">R. A indenização integral é caracterizada quando os prejuízos resultantes de um mesmo sinistro atingirem ou ultrapassarem 75% (ou percentual inferior quando previsto na apólice) do valor contratado pelo segurado. Em caso de roubo ou furto do veículo sem que o mesmo seja recuperado, há também a indenização integral.</p>
-							<p class="question">2. Como devo proceder para o recebimento de indenização integral?</p>
-							<p class="awnser">R. No caso de indenização integral, o segurado deverá, ocorrendo sinistro, avisar imediatamente a seguradora, preencher o formulário de aviso de sinistro e apresentar a documentação necessária, definida nas condições gerais do seguro. Nos casos de indenização integral, o documento de transferência de propriedade do veículo deverá ser devidamente preenchido com os dados de seu proprietário e da sociedade seguradora.</p>
-							<h3 class="closed">Capitalização</h3>
-							<h3 class="closed">DPVAT - Seguro de Danos Pessoais Causados por Veículos Automotor</h3>
-							<h3 class="closed">Perguntas sobre planos por sobrevivência - VGBL e PGBL.</h3>
-							<h3 class="closed">Perguntas sobre previdência complementar aberta.</h3>
-							<h3 class="closed">Perguntas sobre seguro de pessoas.</h3>
-							<h3 class="closed">Perguntas sobre seguro residencial.</h3>
-							<h3 class="closed">Perguntas sobre seguros (dúvidas referentes a todos os tipos de seguro).</h3>
+							<h2 class="title-h2 animation-1">A LIEN te ajuda a entender melhor o mundo dos seguros.</h2>
+							<p class="p-light animation-1">clique no tópico para ver mais</p>
+							<h3 class="animation-1">Seguro de Automóvel</h3>
+							<p class="question animation-1">1. O que caracteriza a indenização integral em caso de ocorrência de sinistro?</p>
+							<p class="awnser animation-1">R. A indenização integral é caracterizada quando os prejuízos resultantes de um mesmo sinistro atingirem ou ultrapassarem 75% (ou percentual inferior quando previsto na apólice) do valor contratado pelo segurado. Em caso de roubo ou furto do veículo sem que o mesmo seja recuperado, há também a indenização integral.</p>
+							<p class="question animation-1">2. Como devo proceder para o recebimento de indenização integral?</p>
+							<p class="awnser animation-1">R. No caso de indenização integral, o segurado deverá, ocorrendo sinistro, avisar imediatamente a seguradora, preencher o formulário de aviso de sinistro e apresentar a documentação necessária, definida nas condições gerais do seguro. Nos casos de indenização integral, o documento de transferência de propriedade do veículo deverá ser devidamente preenchido com os dados de seu proprietário e da sociedade seguradora.</p>
+							<h3 class="closed animation-1">Capitalização</h3>
+							<h3 class="closed animation-1">DPVAT - Seguro de Danos Pessoais Causados por Veículos Automotor</h3>
+							<h3 class="closed animation-1">Perguntas sobre planos por sobrevivência - VGBL e PGBL.</h3>
+							<h3 class="closed animation-1">Perguntas sobre previdência complementar aberta.</h3>
+							<h3 class="closed animation-1">Perguntas sobre seguro de pessoas.</h3>
+							<h3 class="closed animation-1">Perguntas sobre seguro residencial.</h3>
+							<h3 class="closed animation-1">Perguntas sobre seguros (dúvidas referentes a todos os tipos de seguro).</h3>
 						</div>
 					</div>
 				</div>
@@ -255,16 +288,16 @@
 					<div class="row row-glossario">
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<h1 class="title-section">Glossário</h1>
-							<h2 class="title-h2">Que tal saber mais sobre seguros de A a Z?</h2>
-							<h3>Com qual letra começa o termo que procura?</h3>
-							<h4><span>A</span> B C D E F G H I J L M N O P Q R S Q U V X Z</h4>
-							<p class="title-glossario">ABALROAMENTO</p>
-							<p class="description-glossario">Choque do navio ou embarcação com outro navio ou embarcação, cais, bóia, ou qualquer outro objeto que possa gerar algum dano, de maneira acidental. (Circular SUSEP 354/07).</p>
-							<div class="box-relative">
+							<h2 class="title-h2 animation-1">Que tal saber mais sobre seguros de A a Z?</h2>
+							<h3 class="animation-1">Com qual letra começa o termo que procura?</h3>
+							<h4 class="animation-1"><span>A</span> B C D E F G H I J L M N O P Q R S Q U V X Z</h4>
+							<p class="title-glossario animation-1">ABALROAMENTO</p>
+							<p class="description-glossario animation-1">Choque do navio ou embarcação com outro navio ou embarcação, cais, bóia, ou qualquer outro objeto que possa gerar algum dano, de maneira acidental. (Circular SUSEP 354/07).</p>
+							<div class="box-relative animation-1">
 								<input type="text" placeholder="Filtrar"/>
 								<button class="filter"></button>
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding animation-1">
 								<ul>
 									<li>ABALROAMENTO</li>
 									<li>ACEIRO</li>
@@ -272,7 +305,7 @@
 									<li>ACIDENTE PESSOAL DE PASSAGEIROS</li>
 								</ul>
 							</div>
-							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding">
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding animation-1">
 								<ul>
 									<li>ABALROAMENTO</li>
 									<li>ACEIRO</li>
@@ -321,10 +354,10 @@
 					<div class="row row-seguradoras-associadas">
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<h1 class="title-section">Seguradoras Associadas</h1>
-							<h2 class="title-h2">Conheça quem são as nossas seguradoras associadas.</h2>
+							<h2 class="title-h2 animation-1">Conheça quem são as nossas seguradoras associadas.</h2>
 						</div>
 					</div>
-					<div id="carousel-seguradoras-associadas" class="owl-carousel owl-theme carousel-default">
+					<div id="carousel-seguradoras-associadas" class="owl-carousel owl-theme">
 						<div class="item">
 							<div class="row row-items">
 								<div class="col-lg-3 col-md-3 col-sm-6">
@@ -470,25 +503,25 @@
 					<div class="row row-contato">
 						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 							<h1 class="title-section">Contato</h1>
-							<h2 class="title-h2">Entre em contato com a LIEN Corretora de Seguros <br/>Nós estamos prontos para lhe atender!</h2>
+							<h2 class="title-h2 animation-1">Entre em contato com a LIEN Corretora de Seguros <br/>Nós estamos prontos para lhe atender!</h2>
 							<form id="form-contact" data-validate="true">
-								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 animation-1">
 									<label for="work-here-name">Nome</label>
 									<input type="text" id="work-here-name" data-required="true" class="input-hbs-cambio">
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 animation-1">
 									<label for="work-here-email">Email</label>
 									<input type="text" id="work-here-email" data-email="true" class="input-hbs-cambio">
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 animation-1">
 									<label for="work-here-phone">Telefone</label>
-									<input type="text" id="work-here-phone" data-required="true" data-inputmask="'mask': '(99) 9999-9999[9]'" class="input-hbs-cambio">
+									<input type="text" id="work-here-phone" data-required="true" data-inputmask="'mask': '(99) 9999-9999[9]'" class="input-hbs-cambio mask">
 								</div>
-								<div class="col-lg-12 generic-relative">
+								<div class="col-lg-12 generic-relative animation-1">
 									<label for="work-here-message">Mensagem</label>
 									<textarea id="work-here-message" data-required="true" class="input-hbs-cambio textarea-hbs-cambio"></textarea>
 								</div>
-								<div class="col-lg-12 generic-relative">
+								<div class="col-lg-12 generic-relative animation-1">
 									<button class="lien-button work-here-send">Enviar</button>
 								</div>
 							</form>
@@ -500,12 +533,12 @@
 			<footer>
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-left">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-left animation-2">
 							<img src="./assets/images/lien-abf-footer.svg" alt="Logo ABF"/>
 							<p>© 2015 - 2018 - LIEN Corretora de Seguros.</p>
 							<p>Associada ABF.</p>
 						</div>
-						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-right">
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-right animation-2">
 							<img src="./assets/images/lien-footer-logo.svg" alt="Logo LIEN Branco"/>
 							<p>CNPJ: 22.170.308/0001-18. Cornélio Procópio - Paraná</p>
 							<p>(43) 5094-5050</p>
